--- a/HRISCapsu/HRISCapsu.csproj
+++ b/HRISCapsu/HRISCapsu.csproj
@@ -86,6 +86,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -116,6 +117,12 @@
     <Compile Include="frmAddSeminarEmployee.Designer.cs">
       <DependentUpon>frmAddSeminarEmployee.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmApplyLeave.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmApplyLeave.Designer.cs">
+      <DependentUpon>frmApplyLeave.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmChangePassword.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +152,12 @@
     </Compile>
     <Compile Include="frmEmployeesRecord.Designer.cs">
       <DependentUpon>frmEmployeesRecord.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmListEmployeeLeave.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmListEmployeeLeave.Designer.cs">
+      <DependentUpon>frmListEmployeeLeave.cs</DependentUpon>
     </Compile>
     <Compile Include="frmListofContractualEmployees.cs">
       <SubType>Form</SubType>
@@ -181,6 +194,18 @@
     </Compile>
     <Compile Include="frmViewEmployee.Designer.cs">
       <DependentUpon>frmViewEmployee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Graphs\frmDoctoralGraph.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Graphs\frmDoctoralGraph.Designer.cs">
+      <DependentUpon>frmDoctoralGraph.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Graphs\frmMasteralGraph.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Graphs\frmMasteralGraph.Designer.cs">
+      <DependentUpon>frmMasteralGraph.cs</DependentUpon>
     </Compile>
     <Compile Include="HRISDataSource.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -241,6 +266,9 @@
     <EmbeddedResource Include="frmAddSeminarEmployee.resx">
       <DependentUpon>frmAddSeminarEmployee.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmApplyLeave.resx">
+      <DependentUpon>frmApplyLeave.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmChangePassword.resx">
       <DependentUpon>frmChangePassword.cs</DependentUpon>
     </EmbeddedResource>
@@ -255,6 +283,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmEmployeesRecord.resx">
       <DependentUpon>frmEmployeesRecord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmListEmployeeLeave.resx">
+      <DependentUpon>frmListEmployeeLeave.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmListofContractualEmployees.resx">
       <DependentUpon>frmListofContractualEmployees.cs</DependentUpon>
@@ -273,6 +304,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmViewEmployee.resx">
       <DependentUpon>frmViewEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Graphs\frmDoctoralGraph.resx">
+      <DependentUpon>frmDoctoralGraph.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Graphs\frmMasteralGraph.resx">
+      <DependentUpon>frmMasteralGraph.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MDIMain.resx">
       <DependentUpon>MDIMain.cs</DependentUpon>
@@ -310,7 +347,9 @@
     <EmbeddedResource Include="test.resx">
       <DependentUpon>test.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="app.manifest" />
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="HRISCapsu_TemporaryKey.pfx" />
     <None Include="HRISDataSource.xsc">
       <DependentUpon>HRISDataSource.xsd</DependentUpon>
@@ -394,6 +433,10 @@
     <None Include="Resources\random.png" />
     <None Include="Resources\router.png" />
     <Content Include="200px_capiz_state_un_kVUdc.ico" />
+    <None Include="Resources\capsu circle.png" />
+    <None Include="Resources\profile picture.png" />
+    <None Include="Resources\default.jpg" />
+    <None Include="Resources\default1.jpg" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
