--- a/HRISCapsu/HRISCapsu.csproj
+++ b/HRISCapsu/HRISCapsu.csproj
@@ -207,6 +207,9 @@
     <Compile Include="Graphs\frmMasteralGraph.Designer.cs">
       <DependentUpon>frmMasteralGraph.cs</DependentUpon>
     </Compile>
+    <Compile Include="HRISDataSource.cs">
+      <DependentUpon>HRISDataSource.xsd</DependentUpon>
+    </Compile>
     <Compile Include="HRISDataSource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -220,6 +223,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportViewer\frmAcademicReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportViewer\frmAcademicReport.Designer.cs">
+      <DependentUpon>frmAcademicReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReportViewer\frmContractualEmployeesReport.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -237,6 +246,12 @@
     </Compile>
     <Compile Include="ReportViewer\frmEmployeesReport.Designer.cs">
       <DependentUpon>frmEmployeesReport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReportViewer\frmNonAcademic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportViewer\frmNonAcademic.Designer.cs">
+      <DependentUpon>frmNonAcademic.cs</DependentUpon>
     </Compile>
     <Compile Include="ReportViewer\frmPositionsReport.cs">
       <SubType>Form</SubType>
@@ -256,6 +271,12 @@
     </Compile>
     <Compile Include="test.Designer.cs">
       <DependentUpon>test.cs</DependentUpon>
+    </Compile>
+    <Compile Include="test1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="test1.Designer.cs">
+      <DependentUpon>test1.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="frmAbout.resx">
       <DependentUpon>frmAbout.cs</DependentUpon>
@@ -324,11 +345,16 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Reports\rptAcademic.rdlc" />
     <EmbeddedResource Include="Reports\rptContractualEmployees.rdlc" />
     <EmbeddedResource Include="Reports\rptDepartments.rdlc" />
     <EmbeddedResource Include="Reports\rptEmployees.rdlc" />
+    <EmbeddedResource Include="Reports\rptNonAcademic.rdlc" />
     <EmbeddedResource Include="Reports\rptPositions.rdlc" />
     <EmbeddedResource Include="Reports\rptRegularEmployees.rdlc" />
+    <EmbeddedResource Include="ReportViewer\frmAcademicReport.resx">
+      <DependentUpon>frmAcademicReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReportViewer\frmContractualEmployeesReport.resx">
       <DependentUpon>frmContractualEmployeesReport.cs</DependentUpon>
     </EmbeddedResource>
@@ -338,6 +364,9 @@
     <EmbeddedResource Include="ReportViewer\frmEmployeesReport.resx">
       <DependentUpon>frmEmployeesReport.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReportViewer\frmNonAcademic.resx">
+      <DependentUpon>frmNonAcademic.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReportViewer\frmPositionsReport.resx">
       <DependentUpon>frmPositionsReport.cs</DependentUpon>
     </EmbeddedResource>
@@ -346,6 +375,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="test.resx">
       <DependentUpon>test.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="test1.resx">
+      <DependentUpon>test1.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.manifest">
       <SubType>Designer</SubType>
