--- a/HRISCapsu/HRISCapsu.csproj
+++ b/HRISCapsu/HRISCapsu.csproj
@@ -13,7 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>D:\Keen\Documents\Visual Studio 2017\Projects\Human-Resource-Information-System\publish\</PublishUrl>
+    <PublishUrl>D:\aguro\Documents\C# Projects\Human-Resource-Information-System\publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>Human Resource Information System</ProductName>
     <PublisherName>Capiz State University Pontevedra</PublisherName>
-    <ApplicationRevision>7</ApplicationRevision>
+    <ApplicationRevision>10</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
